--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,62 @@ button {
 .footer-social-link:focus {
   background-color: #31d0aa;
 }
-/* Modal */
+
+.footer-form-container {
+  margin-left: 80px;
+}
+
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-form-imput {
+  width: 264px;
+  height: 40px;
+  padding-left: 16px;
+  color: var(--white, #fff);
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid var(--white, #fff);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2; /* 200% */
+  letter-spacing: 0.04em;
+}
+.footer-form-imput::placeholder {
+  color: var(--white, #fff);
+}
+
+.footer-btn {
+  width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  flex-basis: calc((100% - 16 * 1) / 2);
+  align-items: center;
+  padding: 0;
+  border: none;
+  border-radius: 4px;
+  background: var(--iris, #4d5ae5);
+  color: var(--white);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.04em;
+  fill: currentColor;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-btn:hover,
+.footer-btn:focus {
+  background-color: var(--ocean);
+}
+
+/* Modal window*/
 .backdrop {
   position: fixed;
   top: 0;
@@ -512,7 +567,15 @@ button {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* Portfolio */
+.modal-caption {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.02em;
+  color: var(--navyblue, #2e2f42);
+  text-align: center;
+}
+/* Portfolio page*/
 
 .portfolio {
   padding-top: 96px;
