--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,6 @@ button {
   height: 56px;
   border: none;
   background-color: var(--iris);
-  font-family: 'Roboto', sans-serif;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
@@ -526,6 +525,7 @@ button {
   pointer-events: none;
 }
 .modal {
+  padding: 72px 24px 24px 24px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -568,13 +568,142 @@ button {
 }
 
 .modal-caption {
+  display: block;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5; /* 150% */
   letter-spacing: 0.02em;
   color: var(--navyblue, #2e2f42);
   text-align: center;
+  width: 360px;
+  margin-bottom: 16px;
 }
+/* Modal form */
+
+.modal-form-label {
+  display: block;
+  margin-bottom: 4px;
+  color: var(--lightslate);
+  font-size: 12px;
+  line-height: 1.16; /* 116.667% */
+  letter-spacing: 0.04em;
+}
+
+.modal-form-field {
+  position: relative;
+  margin-bottom: 8px;
+}
+.modal-form-container {
+  margin-bottom: 16px;
+}
+
+.modal-form-input {
+  width: 100%;
+  padding: 8px 16px;
+  border-radius: 4px;
+  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-input:focus,
+.modal-form-textarea:focus {
+  border-color: var(--iris);
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--iris);
+}
+.modal-form-textarea {
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  resize: none;
+  background-color: transparent;
+  outline: transparent;
+  border-radius: 4px;
+  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  color: var(--navyblue);
+  font-size: 12px;
+  line-height: 1.17; /* 116.667% */
+  letter-spacing: 0.04em;
+}
+
+.modal-form-textarea::placeholder {
+  color: var(--lightslate);
+}
+.modal-form-agreement {
+  color: var(--lightslate);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.16; /* 116.667% */
+  letter-spacing: 0.04em;
+}
+
+.agreement-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  border-radius: 2px;
+  color: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+input[type='checkbox']:checked + .agreement-checkbox {
+  background-color: var(--ocean);
+  border: none;
+  color: var(--cloud);
+}
+.agreement-checkbox-icon {
+  fill: currentColor;
+}
+
+.modal-form-desc {
+  user-select: none;
+}
+.modal-form-link {
+  color: var(--iris);
+}
+.modal-form-btn {
+  margin: 24px auto;
+  display: block;
+  width: 169px;
+  height: 56px;
+  border: none;
+  background-color: var(--iris);
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.04em;
+  color: var(--white);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 16px 32px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-btn:hover,
+.modal-form-btn:hover {
+  background-color: var(--ocean);
+}
+
 /* Portfolio page*/
 
 .portfolio {
