--- a/css/style.css
+++ b/css/style.css
@@ -598,7 +598,7 @@ textarea {
   margin-bottom: 4px;
   color: var(--lightslate);
   font-size: 12px;
-  line-height: 1.16; /* 116.667% */
+  line-height: 1.17; /* 116.667% */
   letter-spacing: 0.04em;
 }
 
@@ -608,6 +608,7 @@ textarea {
 
 .modal-form-input {
   width: 100%;
+  height: 40px;
   padding: 8px 16px;
   border-radius: 4px;
   border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
@@ -630,6 +631,7 @@ textarea {
   left: 16px;
   transform: translateY(-50%);
   pointer-events: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-input:focus + .modal-form-icon {
   fill: var(--iris);
@@ -646,20 +648,25 @@ textarea {
   outline: transparent;
   border-radius: 4px;
   border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
-  color: var(--navyblue);
+  color: var(--navyblue-modal, rgba(46, 47, 66, 0.4));
   font-size: 12px;
-  line-height: 1.17; /* 116.667% */
+  line-height: 1.17;
   letter-spacing: 0.04em;
 }
 
 .modal-form-textarea::placeholder {
   color: var(--lightslate);
 }
-.modal-form-agreement {
+
+.modal-form-checkbox {
+  margin-bottom: 24px;
+}
+
+.modal-checkbox-text {
+  display: block;
   color: var(--lightslate);
   font-size: 12px;
-  font-weight: 400;
-  line-height: 1.16; /* 116.667% */
+  line-height: 1.17; /* 116.667% */
   letter-spacing: 0.04em;
 }
 
@@ -672,33 +679,31 @@ textarea {
   margin-right: 8px;
   border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
   border-radius: 2px;
-  color: transparent;
+  fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 input[type='checkbox']:checked + .agreement-checkbox {
   background-color: var(--ocean);
   border: none;
-  color: var(--cloud);
+  fill: var(--cloud);
 }
 .agreement-checkbox-icon {
-  fill: currentColor;
+  color: currentColor;
 }
 
-.modal-form-desc {
-  user-select: none;
-}
 .modal-form-link {
   color: var(--iris);
 }
 .modal-form-btn {
-  margin: 24px auto;
   display: block;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
+  margin: 0 auto;
   border: none;
+  font-family: 'Roboto', sans-serif;
   background-color: var(--iris);
   border-radius: 4px;
   cursor: pointer;
