--- a/css/style.css
+++ b/css/style.css
@@ -648,10 +648,11 @@ textarea {
   outline: transparent;
   border-radius: 4px;
   border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
-  color: var(--navyblue-modal, rgba(46, 47, 66, 0.4));
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-textarea::placeholder {
@@ -685,7 +686,7 @@ textarea {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-input[type='checkbox']:checked + .agreement-checkbox {
+input[type='checkbox']:checked + label span {
   background-color: var(--ocean);
   border: none;
   fill: var(--cloud);
