--- a/css/style.css
+++ b/css/style.css
@@ -648,13 +648,16 @@ textarea {
   outline: transparent;
   border-radius: 4px;
   border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  color: var(--navyblue-modal, rgba(46, 47, 66, 0.4));
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.modal-form-textarea:focus {
+  border-color: var(--iris);
+}
 .modal-form-textarea::placeholder {
   color: var(--lightslate);
 }
